--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,8 @@
       </select>
       <button type="submit">Login</button>
     </form>
+
+    <p>Don't have an account? <a href="create-account.html">Create Account</a></p>
   </div>
 
   <script>
@@ -28,17 +30,25 @@
       const password = document.getElementById("password").value;
       const role = document.getElementById("role").value;
 
-      // Simple dummy authentication
-      if (role === "admin" && username === "admin" && password === "admin123") {
-        localStorage.setItem("role", "admin");
-        localStorage.setItem("username", username);
-        window.location.href = "admin.html";
-      } else if (role === "student" && username === "student" && password === "student123") {
-        localStorage.setItem("role", "student");
-        localStorage.setItem("username", username);
-        window.location.href = "student.html";
+      const storedUser = localStorage.getItem("user_" + username);
+
+      if (storedUser) {
+        const user = JSON.parse(storedUser);
+
+        if (user.password === password && user.role === role) {
+          localStorage.setItem("username", username);
+          localStorage.setItem("role", role);
+
+          if (role === "admin") {
+            window.location.href = "admin.html";
+          } else if (role === "student") {
+            window.location.href = "student.html";
+          }
+        } else {
+          alert("Incorrect password or role.");
+        }
       } else {
-        alert("Invalid credentials. Please try again.");
+        alert("User not found. Please create an account.");
       }
     });
   </script>
